<resources>

    <string name="app_name">AnimatedGradientTextView</string>
    <string name="title">Fantasia</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="fonts_otf">BebasNeue.otf</string>

</resources>